@@ -9,8 +9,8 @@
      9	2012-10-22, HDFS-4078. , Tsz-wo Sze, 9a0651b4b86727910ae29d055aac6a23490b5ed3, 325, HDFS-4078. Handle replication in snapshots.   git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/HDFS-2802@1400743 13f79535-47bb-0310-9956-ffa450edef68 
     10	2012-10-23, HDFS-4084. , Suresh Srinivas, 4fde5c01901b6acb4363747d01603664a0283fc4, 388, HDFS-4084. Provide CLI support to allow and disallow snapshot on a directory. Contributed by Brondon Li.  git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/HDFS-2802@1401444 13f79535-47bb-0310-9956-ffa450edef68 
     11	2012-10-24, HDFS-4091. , Tsz-wo Sze, b897bb8992b3ab70febbb0400c565c8141cc9038, 108, HDFS-4091. Add snapshot quota to limit the number of snapshots allowed.   git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/HDFS-2802@1401868 13f79535-47bb-0310-9956-ffa450edef68 
-
     12	2012-10-25, HDFS-4097. , Suresh Srinivas, 2d5334931ed569e11b293a49fb7f475a09da2616, 481, HDFS-4097. Provide CLI support for createSnapshot. Contributed by Brandon Li.  git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/HDFS-2802@1401971 13f79535-47bb-0310-9956-ffa450edef68 
+
     13	2012-10-25, HDFS-4092. , Tsz-wo Sze, 719279ea8a510ba8d04174ac85ad42fa991725a2, 212, HDFS-4092. Update file deletion logic for snapshot so that the current inode is removed from the circular linked list; and if some blocks at the end of the block list no longer belong to any other inode  collect them and update the block list.   git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/HDFS-2802@1402287 13f79535-47bb-0310-9956-ffa450edef68 
     14	2012-10-26, HDFS-4111. , Suresh Srinivas, 9e26fdcda7957962088f2c2bef2b3ba0324e6dd1, 397, HDFS-4111. Support snapshot of subtrees. Contributed by Tsz Wo (Nicholas)  Sze.  git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/HDFS-2802@1402684 13f79535-47bb-0310-9956-ffa450edef68 
     15	2012-10-28, HDFS-4119. , Tsz-wo Sze, f60a844e7af0fd95cb10f6faa427a73314753dbd, 210, HDFS-4119. Complete the allowSnapshot code and add a test for it.   git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/HDFS-2802@1403087 13f79535-47bb-0310-9956-ffa450edef68 
